--- a/src/locales/en_GB.json
+++ b/src/locales/en_GB.json
@@ -47,7 +47,7 @@
 	"darkmode_desc": "Determine whether to use dark mode (only for supported themes). This setting pertains to your device.",
 	"changepw": "Change password",
 	"changepw_Desc": "Change your password. This setting pertains to your account.",
-	"currnetpw": "Current password",
+	"currentpw": "Current password",
 	"currentpw_inp": "Input current password",
 	"newpw": "New password",
 	"newpw_inp": "Input new password",
@@ -55,7 +55,6 @@
 	"useRCBar_Desc": "Determine whether to use recent chanegs sidebar. This setting pertains to the device.",
 	"use": "Use",
 	"dontuse": "Do not use",
-	"currentpw": "currentpw",
 	"pagename_toolong": "The page name is too long. The maximum length for a page name is 255 characters.",
 	"pagename_specialchar": "The page name contains an illegal character.",
 	"pagename_illegalfile": "Normal page name cannot start with File:.",
