--- a/src/locales/ko_KR.json
+++ b/src/locales/ko_KR.json
@@ -47,7 +47,7 @@
 	"darkmode_desc": "다크 모드 사용 여부를 설정할 수 있습니다(지원하는 테마에 한함). 이 설정은 기기에 귀속됩니다.",
 	"changepw": "비밀번호 변경",
 	"changepw_Desc": "비밀번호를 변경할 수 있습니다. 이 설정은 계정에 귀속됩니다.",
-	"currnetpw": "현재 비밀번호",
+	"currentpw": "현재 비밀번호",
 	"currentpw_inp": "현재 비밀번호 입력",
 	"newpw": "새 비밀번호",
 	"newpw_inp": "새 비밀번호 입력",
@@ -128,6 +128,5 @@
 	"show30": "30개 보이기",
 	"show100": "100개 보이기",
 	"pagename": "문서명",
-	"category": "분류",
-	"currentpw": "currentpw"
+	"category": "분류"
 }
